<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".Kalkulator">

    <TextView
        android:text="@string/input_angka"
        android:layout_marginBottom="40dp"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/angkaawal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/angkakedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="18sp"
            android:onClick="tambah"/>
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="18sp"
            android:onClick="kurang"/>
        <Button
            android:id="@+id/kali"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/kali"
            android:textSize="18sp"
            android:onClick="kali"/>
        <Button
            android:id="@+id/bagi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bagi"
            android:textSize="18sp"
            android:onClick="bagi"/>
    </LinearLayout>

    <Button
        android:id="@+id/bersih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bersihkan"/>
    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jawab"
        android:textSize="18sp"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/hasilText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_negara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="List View"/>
</LinearLayout>